Add navbar styles, color reference

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css"
     rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles/colors.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  sticky-top">
+    <nav class="navbar navbar-expand-lg nav-bg sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="" height="20" alt="My Barbershop Logo" loading="lazy">
@@ -46,16 +47,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="links-color nav-link" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/pedir-cita.html">Pedir cita</a>
+              <a class="links-color nav-link" href="pages/pedir-cita.html">Pedir cita</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/servicios.html">Nuestros servicios</a>
+              <a class="links-color nav-link" href="pages/servicios.html">Nuestros servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/about-us.html">¿Quienes somos?</a>
+              <a class="links-color nav-link" href="pages/about-us.html">¿Quienes somos?</a>
             </li>
           </ul>
         </div>
