--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
 </div>
 
 <!-- Contenido de la página -->
-<div class="container mx-auto p-8">
-    <!-- Contenido de la página aquí -->
+<div class="container mx-auto p-8 landing flex-col text-center">
+    <h1 class="text-4xl font-bold text-pink-600 mb-6">¿Qué quieres tomar?</h1>
+    <a href="pages/carta.html">
+    <button type="button" class="text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:from-pink-600 hover:via-pink-500 hover:to-pink-400 focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium rounded-lg text-sm px-5 py-2.5">
+        Ver carta
+    </button></a>
 </div>
+
+
 
 <script>
     document.getElementById('menu-toggle').addEventListener('click', function () {
