--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>El Caiman Club</title>
 </head>
-<body class="bg-gray-200">
+<body class="bg-gray-200" background="src/img/landingpage-bg.jpg">
 <!-- Navbar -->
 <nav class="bg-white p-4">
     <div class="container mx-auto flex justify-between items-center bg-white">
