Add Reservas to navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </div>
         <!--Elementos del menú-->
         <div class="hidden md:flex space-x-4">
-            <a href="#" class="text-pink-600 hover:text-pink-900">Carta</a>
+            <a href="pages/carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
+            <a href="#" class="text-pink-600 hover:text-pink-900">Reservas</a>
             <a href="#" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
             <a href="#" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
             <a href="#" class="text-pink-600 hover:text-pink-900">Nosotros</a>
@@ -35,7 +36,8 @@
 
 <!-- Menú desplegable para dispositivos móviles -->
 <div id="menu" class="md:hidden hidden bg-white p-4">
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+    <a href="pages/carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
     <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
     <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
     <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
