carta y paginas asociadas

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
         <!--Elementos del menú-->
         <div class="hidden md:flex space-x-4">
+            <a href="pages/carta.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
             <a href="pages/carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
             <a href="#" class="text-pink-600 hover:text-pink-900">Reservas</a>
             <a href="#" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
@@ -55,11 +56,7 @@
 
 
 
-<script>
-    document.getElementById('menu-toggle').addEventListener('click', function () {
-        document.getElementById('menu').classList.toggle('hidden');
-    });
-</script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
