--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
         <!--Logo -->
         <div>
-            <a href="#"><img src="src\img\logo\caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+            <a href="#"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
         </div>
         <!--Elementos del menú-->
         <div class="hidden md:flex space-x-4">
-            <a href="pages/carta.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
+            <a href="/index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
             <a href="pages/carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
             <a href="/pages/reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
             <a href="/pages/ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
