--- a/pages/carta.html
+++ b/pages/carta.html
@@ -6,9 +6,6 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <title>El Caiman Club</title>
   <style>
-      .height-adjusted {
-          height: calc(100vh - 87.98px); /* Ajuste la altura si es necesario */
-      }
 
       .recomendacion {
           width: 274.65px; /* Ancho fijo */
@@ -22,13 +19,14 @@
           }
       }
 
+
       /*TODO DESCOMENTAR LOS ESTILOS DEL MAIN CUANDO SE TENGAN LAS IMAGENES DE LAS CATEGORIAS*/
-      /*main {*/
-      /*    background-image: url('/src/img/fondos/fondo-carta.jpeg'); !* Añade tu propia imagen aquí *!*/
-      /*    background-size: cover;*/
-      /*    background-position: center;*/
-      /*    background-repeat: no-repeat;*/
-      /*}*/
+      main {
+          /*background-image: url('/src/img/fondos/fondo-carta.jpeg'); !* Añade tu propia imagen aquí *!*/
+          /*background-size: cover;*/
+          /*background-position: center;*/
+          /*background-repeat: no-repeat;*/
+      }
   </style>
 </head>
 <body class="bg-gray-200">
@@ -38,17 +36,17 @@
     <div class="container mx-auto flex justify-between items-center bg-white">
       <!--Logo -->
       <div>
-        <a href="#"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%"
-                         width="35%"></a>
+        <a href="#"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
       </div>
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
-        <a href="#" class="text-pink-600 hover:text-pink-900">Carta</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Reservas</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Nosotros</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Shop</a>
+        <a href="/index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
+        <a href="/pages/carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
+        <a href="/pages/reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
+        <a href="/pages/ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
+        <a href="/pages/donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
+        <a href="/pages/about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
+        <a href="/pages/shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
       </div>
 
       <div class="md:hidden">
@@ -63,25 +61,24 @@
 
   <!-- Menú desplegable para dispositivos móviles -->
   <div id="menu" class="md:hidden hidden bg-white p-4">
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
+    <a href="/pages/carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+    <a href="/pages/reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
+    <a href="/pages/ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
+    <a href="/pages/donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
+    <a href="/pages/about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
+    <a href="/pages/shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
-
-<main class="pt-16"> <!-- Agregue padding-top para compensar el header fijo -->
+<main class="pt-24 flex flex-col min-h-screen"> <!-- Agregue padding-top para compensar el header fijo -->
   <!-- Contenido de la página -->
-  <div class="container mx-auto p-8 height-adjusted flex flex-col justify-center items-center ">
+  <div class="container mx-auto flex-1 p-8 flex justify-center items-center">
 
     <!-- Contenedor de Categorías -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:flex lg:flex lg:flex-row gap-4 mt-52 md:mt-0 lg:mt-0">
+    <div class="flex justify-center items-center flex-wrap gap-4">
       <!-- Ajuste las clases aquí para pantallas grandes -->
 
       <!-- Categoría Combinados -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center">
+      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description="">
           <img src="" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Combinados</p>
@@ -89,7 +86,7 @@
       </div>
 
       <!-- Categoría Cachimbas -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center">
+      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description="">
           <img src="" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Cachimbas</p>
@@ -97,7 +94,7 @@
       </div>
 
       <!-- Categoría Cócteles -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center">
+      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description="">
           <img src="" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Cócteles</p>
@@ -105,7 +102,7 @@
       </div>
 
       <!-- Categoría Cervezas -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center">
+      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description="">
           <img src="" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Cervezas</p>
@@ -113,7 +110,7 @@
       </div>
 
       <!-- Categoría Vinos -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center">
+      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description="">
           <img src="" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Vinos</p>
@@ -121,7 +118,7 @@
       </div>
 
       <!-- Categoría Refrescos -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center">
+      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description="">
           <img src="" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Refrescos</p>
@@ -129,7 +126,7 @@
       </div>
 
       <!-- Categoría Batidos -->
-      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center">
+      <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description="">
           <img src="" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Batidos</p>
@@ -140,7 +137,7 @@
   </div>
 
   <!-- Tarjeta de Recomendación Centralizada -->
-  <div class="recomendacion hidden absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-4 rounded-lg shadow-lg z-10">
+  <div class="recomendacion hidden absolute top-60 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-4 rounded-lg shadow-lg z-20">
     <img id="recomendacion-imagen" src="" alt="Imagen Recomendación" class="w-full h-auto">
     <!-- Imagen de la recomendación -->
     <p id="recomendacion-texto"></p><!-- Texto de la recomendación -->
