--- a/pages/cartas/combinados.html
+++ b/pages/cartas/combinados.html
@@ -58,13 +58,13 @@
       </div>
       <!--Elementos del menú-->
       <div class="hidden md:flex space-x-4">
-        <a href="/index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
-        <a href="/pages/carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
-        <a href="/pages/reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
-        <a href="/pages/ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
-        <a href="/pages/donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
-        <a href="/pages/about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
-        <a href="/pages/shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
+        <a href="../../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
+        <a href="../carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
+        <a href="../reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
+        <a href="../ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
+        <a href="../donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
+        <a href="../about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
+        <a href="../shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
       </div>
 
       <div class="md:hidden">
@@ -79,24 +79,34 @@
 
   <!-- Menú desplegable para dispositivos móviles -->
   <div id="menu" class="md:hidden hidden bg-white p-4">
-    <a href="/pages/carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
-    <a href="/pages/reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
-    <a href="/pages/ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
-    <a href="/pages/donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
-    <a href="/pages/about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
-    <a href="/pages/shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
+    <a href="../carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+    <a href="../reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
+    <a href="../ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
+    <a href="../donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
+    <a href="../about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
+    <a href="../shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
 <main>
   <div class="container mx-auto p-8">
     <div class="carta">
+      <div class="titulo-carta">Combinados</div>
       <!-- Categoría: Ginebras -->
       <div class="categoria">
         <div class="titulo-categoria">GINEBRAS</div>
         <div class="producto"><span>Beffeter</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Tanqueray </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Puerto de Indias</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Larios </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Seagrams  </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Tanqueray 0,0</span> <span class="precio">7€</span></div>
         <!-- ... Más productos ... -->
         <div class="titulo-categoria">Premium</div>
         <div class="producto"><span>Martin Millers</span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Nordes</span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Saphire </span> <span class="precio">9€</span></div>
+        <div class="producto"><span>London </span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Bulldog </span> <span class="precio">9€</span></div>
         <!-- ... Más productos ... -->
       </div>
 
@@ -104,14 +114,47 @@
       <div class="categoria">
         <div class="titulo-categoria">WHISKY</div>
         <div class="producto"><span>Ballantines</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>J&B</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>White Label</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Jony Walker Red</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Cutty sark</span> <span class="precio">7€</span></div>
         <!-- ... Más productos ... -->
         <div class="titulo-categoria">Premium</div>
         <div class="producto"><span>Jack Daniels</span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Jony Walker Back</span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Cardhu</span> <span class="precio">12€</span></div>
         <!-- ... Más productos ... -->
       </div>
 
-      <!-- ... Más categorías ... -->
+      <!-- Categoría: RON -->
+      <div class="categoria">
+        <div class="titulo-categoria">RON</div>
+        <div class="producto"><span>Cacique </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Brugal </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Legendario </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Barcelo</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Negrita </span> <span class="precio">7€</span></div>
+        <!-- ... Más productos ... -->
+        <div class="titulo-categoria">Premium</div>
+        <div class="producto"><span>Havana 7</span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Santa Teresa</span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Pampero Aniversario</span> <span class="precio">12€</span></div>
+        <!-- ... Más productos ... -->
+      </div>
 
+      <!-- Categoría: Vodka -->
+      <div class="categoria">
+        <div class="titulo-categoria">Vodka</div>
+        <div class="producto"><span>Absolut  </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Eristoff  </span> <span class="precio">7€</span></div>
+        <!-- ... Más productos ... -->
+        <div class="titulo-categoria">Premium</div>
+        <div class="producto"><span>Eristoff Black</span> <span class="precio">9€</span></div>
+
+        <!-- ... Más productos ... -->
+      </div>
+
+      <div>*Combinado con bebida energética + 1€</div>
     </div>
 </main>
 </div>
